css/style.css
/* Reset */

* {
    scroll-behavior: smooth;
    margin: 0;
    padding: 0;
    font-family: 'Roboto', arial, sans-serif;
    text-decoration: none;
    color: #000;
  }
  
  
  
  
  
  
  /* None & Flexbox */
  
  .none {
    display: none;
  }
  
  .flexbox {
    display: flex;
  }
  
  
  
  
  
  
  /* Title font */
  
  .title-font {
    font-family: 'Shrikhand', cursive;
  }
  
  
  
  
  
  
  /* Image box */
  
  .img1 {
    background-image: url("../images/img1.jpg");
  }
  
  .img2 {
    background-image: url("../images/img2.jpg");
  }
  
  .img3 {
    background-image: url("../images/img3.jpg");
  }
  
  .img4 {
    background-image: url("../images/img4.jpg");
  }
  
  

  
  
  /* Loading */
  
  #loading {
    background-color: #000;
    height: 100vh;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 888;
    justify-content: center;
    align-items: center;
    visibility: hidden;
    animation: loading-disparition 1s linear 0s 1;
    -webkit-animation: loading-disparition 1s linear 0s 1;
  }

  #loading div i {
    animation: loading-rotation 1s linear 0s 1;
    -webkit-animation: loading-rotation 1s linear 0s 1;
  }
   #loading div i{
      height: 100%;
      width: 100%;
      color: #0f0;
      text-shadow: 0 0 20px #0f0;
      font-size: 64px;
      padding: 50px;
  }
  #loading div{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
  }

  @keyframes loading-disparition {

    0% {
      visibility: visible;
    }
  
    90% {
      opacity: 1;
    }
  
    95% {
      visibility: hidden;
      opacity: 0;
    }
  
    100% {
      visibility: hidden;
      opacity: 0;
    }
  }
  
@keyframes loading-rotation {

    0% {
      transform: rotateY(0deg);
    }
  
    100% {
      transform: rotateY(360deg);
    }
  }






/* Header */

header {
  height: 60px;
  position: relative;
  justify-content: center;
  align-items: center;
  box-shadow: 0px 1px 5px rgba(0,0,0,0.3);
}

header img {
  height: 30px;
}





/* Footer */

footer {
  padding: 30px 0;
  background-color: #353535;
}

footer p {
  margin-left: 7%;
  margin-bottom: 20px;
  font-size: 16px;
}

footer p,
footer a,
footer .fas,
footer span {
  font-style: normal;
  color: #FFF;
}



/* Footer - Address */

footer address {
  height: 100px;
  margin-left: 7%;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-start;
}

footer a {
  position: relative;
  justify-content: space-between;
  align-items: center;
  overflow: hidden;
  font-size: 14px;
}

footer span {
  margin-left: 22px;
  font-weight: bold;
}

footer .fas {
  position: absolute;
  left: 0;
}

footer .fa-utensils {
  font-size: 12px;
}

footer .fa-hands-helping {
  font-size: 9px;
}




/* Heart */

.heart-box {
  height: 22px;
  width: 22px;
  position: relative;
  justify-content: center;
  align-items: center;
  font-size: 22px;
}

.heart-box .far {
  position: absolute;
  font-size: inherit;
}

.heart-box .fas {
  position: absolute;
  font-size: 0px;
  background: linear-gradient(40deg, #FF79DA, #9356DC);
  background-clip: text;
  -webkit-background-clip: text;
  color: transparent;
}



/* Heart (Animation) */

.heart-box .far {
  transition: color 0.3s linear 0s;
}

.heart-box:hover .far {
  color: transparent;
}

.heart-box .fas {
  transition: font-size 0.3s linear 0s;
}

.heart-box:hover .fas {
  font-size: inherit;
}




/* Button */

.button {
  height: 45px;
  padding: 0 20px;
  border-radius: 25px;
  position: relative;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  background: linear-gradient(175deg, #FF79DA, #9356DC);
  box-shadow: 0px 4px 8px 2px rgba(0,0,0,0.2);
}

.button div {
  height: 100%;
  width: 100%;
  position: absolute;
  z-index: 2;
  opacity: 0;
  background-color: rgba(255, 255, 255, 0.2);
}

.button span {
  z-index: 1;
  font-size: 14px;
  font-weight: bold;
  color: #FFF;
}



/* Button (Animation) */

.button {
  transition: box-shadow 0.1s linear 0s;
}

.button:hover {
  box-shadow: 0px 4px 10px 4px rgba(0,0,0,0.2);
}

.button div {
  transition: opacity 0.1s linear 0s;
}

.button:hover div {
  opacity: 1;
}

